sys_test_verb_refactor: Action verb refactor. Add a "service" section to scenario support to enable touching specific serves on specific nodes. Refactor method names to better match their function. Update FDS Scenario config files accordingly.

--- a/source/test/cfg/BuildSmokeTest_onpr.cfg
+++ b/source/test/cfg/BuildSmokeTest_onpr.cfg
@@ -19,17 +19,15 @@ ip              = localhost
 fds_root        = /fds/node1
 # Base port for this node. Not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
-[am1]
-blk             = false
-fds_node        = node1
 
 
 
 [scenario_install_and_boot_cluster]
 # Bring up the cluster (includes installation and Redis boot.)
 script          = [cluster]
-action          = bootup
+# The default action is install-boot-activate. Otherwise we'd specify an action option.
 
 [scenario_java_smoke_test]
 script          = [testcases.TestFDSSysLoad.TestSmokeLoad]
@@ -56,6 +54,6 @@ fds_nodes       = node1
 script          = [testsuite.NodeResilienceSuite]
 
 [scenario_shutdown_cluster_and clean_up]
-# Shut down the cluster (includes deinstallation and Redis shutdown.)
+# Shut down the cluster (includes uninstallation and Redis shutdown.)
 script          = [cluster]
-action          = shutdown
+action          = kill-uninst
