--- a/source/test/cfg/DMTMigration.cfg
+++ b/source/test/cfg/DMTMigration.cfg
@@ -10,42 +10,28 @@ password        = passwd
 
 # The 'node' section defines nodes parameters. The section must be prefixed
 # with 'node' but is also used as a unique ID for the node.
-#
-# For this test we use the node names that will be assigned by OM (apparently
-# OM does not currently allow a provided node name) because this test
-# will use the "node remove" test case which requires the node name used
-# by OM.
-#
-[Node-1]
+[node1]
 # Denotes this node will run an OM
 om              = true
-
 # We'll start Redis with this node. Since all the other nodes listed
 # here are on the same machine, we don't need to specify Redis for
 # boot up on them.
 redis           = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
-fds_root        = /fds/Node-1
-
+fds_root        = /fds/node1
 # Base port for this node. Not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 
-[Node-2]
+[node2]
 enable          = true
 ip              = localhost
-fds_root        = /fds/Node-2
+fds_root        = /fds/node2
 fds_port        = 7100
-
-
-# This is where we put our AMs
-[am1]
-blk             = false
-fds_node        = Node-1
+services        = dm,sm
 
 
 
@@ -54,34 +40,19 @@ fds_node        = Node-1
 # TEST STEPS or CASES or SCENARIOS
 
 # Start and activate an initial 1-node cluster. We don't
-# use "script=[cluster]"/"action=bootup" since we only
+# use "script=[cluster]"/"action=install-boot-activate" since we only
 # want a single node cluster to start, not the 2-node
 # cluster that those configurations would give, there being
 # 2 nodes defined in the resource part of this FDS Scenario config.
 [scenario_install_and_boot_node1]
-script          = [Node-1]
-action          = bootup
-# Delay wait after running the script. In seconds.
-delay_wait      = 10
-
-[scenario_activate_the_cluster_to_this_point]
-# Activate the cluster as currently defined.
-script          = [cluster]
-action          = activate
-
-# Note, we use action "bootup" here. Log behavior is
-# different if we use "activate" (i.e., have the PM
-# boot AM).
-[scenario_start_am_on_node1]
-script          = [am1]
-action          = bootup
-delay_wait      = 10
+script          = [node1]
+action          = install-boot-activate
 
 [scenario_verify_node1_up]
 script          = [verify]
 state           = up
 # Comma separated list of nodes. No white space.
-fds_nodes       = Node-1
+fds_nodes       = node1
 
 
 
@@ -91,7 +62,7 @@ fds_nodes       = Node-1
 [scenario_verify_initial_dmt_migration10]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -99,12 +70,12 @@ logentry        = OM_PmAgent: will send node activate message to Node-1
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration11]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -112,12 +83,12 @@ logentry        = Sent DMT to 1 DM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration12]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -125,12 +96,12 @@ logentry        = Sent DMT to 1 AM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration13]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -138,12 +109,12 @@ logentry        = Sent DMT to 1 SM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration14]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -151,27 +122,21 @@ logentry        = OM deployed DMT with 1 DMs
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 
 
 # Now start and add a second node to the cluster.
 [scenario_install_and_boot_node2]
-script          = [Node-2]
-action          = bootup
-# Delay wait after running the script. In seconds.
-delay_wait      = 10
+script          = [node2]
+action          = install-boot-activate
 
-[scenario_activate_the_cluster_to_this_point2]
-# Activate the cluster as currently defined.
-script          = [cluster]
-action          = activate
 
 [scenario_verify_all_nodes_up]
 script          = [verify]
 state           = up
 # Comma separated list of nodes. No white space.
-fds_nodes       = Node-1,Node-2
+fds_nodes       = node1,node2
 
 
 
@@ -181,20 +146,20 @@ fds_nodes       = Node-1,Node-2
 [scenario_verify_initial_dmt_migration20]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
 logentry        = OM_PmAgent: will send node activate message to Node-1
 # Exactly the number of occurrences that must be found for success.
-occurrences     = 2
+occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration21]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -202,12 +167,12 @@ logentry        = OM_PmAgent: will send node activate message to Node-2
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration22]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -215,12 +180,12 @@ logentry        = Sent DMT to 2 DM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration23]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -228,12 +193,12 @@ logentry        = Sent DMT to 1 AM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 2
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration24]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -241,12 +206,12 @@ logentry        = Sent DMT to 2 SM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration25]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -254,12 +219,12 @@ logentry        = OM deployed DMT with 2 DMs
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 
-# Now remove node Node-2
+# Now remove node node2
 [scenario_remove_node2_from_cluster]
-script          = [Node-2]
+script          = [node2]
 action          = remove
 # Delay wait after running the script. In seconds.
 delay_wait      = 10
@@ -272,20 +237,20 @@ delay_wait      = 10
 [scenario_verify_initial_dmt_migration30]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
-logentry        = Received remove services for nodeNode-2 remove am ? true remove sm ? true remove dm ? true
+logentry        = Received remove services for nodeNode-2 remove am ? false remove sm ? true remove dm ? true
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 1
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration31]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -293,12 +258,12 @@ logentry        = Sent DMT to 1 DM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 2
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration32]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -306,12 +271,12 @@ logentry        = Sent DMT to 1 AM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 3
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration33]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -319,12 +284,12 @@ logentry        = Sent DMT to 1 SM services successfully
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 2
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 [scenario_verify_initial_dmt_migration34]
 script          = [waitforlog]
 # Node containing log to search.
-fds_node        = Node-1
+fds_node        = node1
 # Service whose log is to be searched.
 service         = om
 # Log entry to search for.
@@ -332,13 +297,13 @@ logentry        = OM deployed DMT with 1 DMs
 # Exactly the number of occurrences that must be found for success.
 occurrences     = 2
 # Maximum time (seconds) to wait for the search to be successful before giving up as failure.
-maxwait         = 60
+maxwait         = 30
 
 
-# This will clean up all nodes defined in teh resource part
+# This will clean up all nodes defined in the resource part
 # of this FDS Scenario config file, even the node that we
 # have now removed from the cluster (but left running).
-[scenario_shutdown_cluster_and clean_up]
-# Shut down the cluster (includes deinstallation and Redis shutdown.)
+[scenario_kill_cluster_and clean_up]
+# Shut down the cluster (includes uninstallation and Redis shutdown.)
 script          = [cluster]
-action          = shutdown
+action          = kill-uninst
