--- a/source/test/cfg/TwoNodeCluster.cfg
+++ b/source/test/cfg/TwoNodeCluster.cfg
@@ -13,24 +13,17 @@ password        = passwd
 [node1]
 # Denotes this node will run an OM
 om              = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
 fds_root        = /fds/node1
-
 # Base port for this node. Not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node2]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
-
-
-# This is where we put our AMs
-[sh1]
-blk             = false
-fds_node        = node1
+services        = dm,sm
