--- a/source/test/cfg/jenkins_slaves.cfg
+++ b/source/test/cfg/jenkins_slaves.cfg
@@ -7,13 +7,6 @@
 user_name       = root
 password        = passwd
 
-# The 'sh' section defines a SH clients parameters. The section must be prefixed
-# with 'sh' but is also used as a unique ID for the client.
-#
-[sh1]
-# Client uses blk services
-#blk             = true
-fds_node        = node1
 
 # The 'node' section defines a nodes paramters. The section must be prefixed
 # with 'node' but is also used as a unique ID for the node.
@@ -27,18 +20,22 @@ ip              = localhost
 fds_root        = /fds
 # Base port for that node, not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node2]
 ip              = 10.1.10.120
 fds_root        = /fds
 fds_port        = 11000
+services        = dm,sm
 
 [node3]
 ip              = 10.1.10.253
 fds_root        = /fds
 fds_port        = 11000
+services        = dm,sm
 
 [node4]
 ip              = 10.1.10.231
 fds_root        = /fds
 fds_port        = 11000
+services        = dm,sm
