--- a/source/test/cfg/BuildSmokeTest_oncommit.cfg
+++ b/source/test/cfg/BuildSmokeTest_oncommit.cfg
@@ -13,34 +13,11 @@ password        = passwd
 [node1]
 # Denotes this node will run an OM
 om              = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
 fds_root        = /fds/node1
-
 # Base port for this node. Not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
-[node2]
-enable          = false
-ip              = localhost
-fds_root        = /fds/node2
-fds_port        = 9000
-
-[node3]
-enable          = false
-ip              = localhost
-fds_root        = /fds/node3
-fds_port        = 10000
-
-[node4]
-enable          = false
-ip              = localhost
-fds_root        = /fds/node4
-fds_port        = 11000
-
-[sh1]
-blk             = false
-fds_node        = node1
