--- a/source/test/cfg/FourNodeCluster.cfg
+++ b/source/test/cfg/FourNodeCluster.cfg
@@ -13,40 +13,31 @@ password        = passwd
 [node1]
 # Denotes this node will run an OM
 om              = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
 fds_root        = /fds/node1
-
 # Base port for this node. Not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node2]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
+services        = dm,sm
 
 [node3]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node4]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
-
-
-# This is where we put our AMs
-[sh1]
-blk             = false
-fds_node        = node1
-
-[sh2]
-blk             = false
-fds_node        = node3
+services        = dm,sm
