--- a/source/test/cfg/Restartability.cfg
+++ b/source/test/cfg/Restartability.cfg
@@ -19,53 +19,39 @@ password        = passwd
 [node1]
 # Denotes this node will run an OM. Therefore, it is enabled automatically.
 om              = true
-
 # We'll start Redis with this node. Since all the other nodes listed
 # here are on the same machine, we don't need to specify Redis for
 # boot up on them.
 redis           = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
 fds_root        = /fds/node1
-
 # Base port for that node, not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node2]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
+services        = dm,sm
 
 [node3]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
+services        = dm,sm
 
 [node4]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
+services        = dm,sm
 
-# The 'sh'/'am' section defines a Access Manager nodes and parameters. The section must be prefixed
-# with 'sh' or 'am' but is also used as a unique ID for the AM.
-#
-[am1]
-# Server uses blk services?
-blk             = false
-# Server node
-fds_node        = node1
-
-[am2]
-# Server uses blk services?
-blk             = true
-# Server node
-fds_node        = node3
 
 # The 'policy' section defines a volume policy
 #
@@ -127,7 +113,7 @@ access = blk
 [scenario_install_and_boot_cluster]
 # Bring up the cluster (includes installation and Redis boot.)
 script          = [cluster]
-action          = bootup
+action          = install-boot-activate
 
 
 
@@ -228,4 +214,4 @@ params          = volume3
 [scenario_shutdown_cluster_and clean_up]
 # Shut down the cluster (includes deinstallation and Redis shutdown.)
 script          = [cluster]
-action          = shutdown
+action          = kill-uninst
