--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -24,47 +24,39 @@ password        = passwd
 [node1]
 # Denotes this node will run an OM. Therefore, it is enabled automatically.
 om              = true
-
 # We'll start Redis with this node. Since all the other nodes listed
 # here are on the same machine, we don't need to specify Redis for
 # boot up on them.
 redis           = true
-
 # IP of the node
 ip              = localhost
-
 # Fds root directory to use
 fds_root        = /fds/node1
-
 # Base port for that node, not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+# By default we get all services on a node. Otherwise we' specify a 'services' option.
 
 [node2]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
+services        = dm,sm
 
 [node3]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
+services        = dm,sm
 
 [node4]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
+services        = dm,sm
 
-# The 'sh'/'am' section defines a Access Manager nodes and parameters. The section must be prefixed
-# with 'sh' or 'am' but is also used as a unique ID for the AM.
-#
-[am1]
-# Server uses blk services?
-blk             = false
-# Server node
-fds_node        = node1
 
 # The 'policy' section defines a volume policy
 #
@@ -80,8 +72,8 @@ priority = 1
 
 # The 'volume' section defines a volume
 [volume1]
-# Name of the client AM to attach to
-client = am1
+# Name of the server AM node to attach to
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 1
 # The size of the volume
@@ -93,8 +85,8 @@ access = s3
 
 # The 'volume' section defines a volume
 [volume2]
-# Name of the client AM to attach to
-client = am1
+# Name of the server AM node to attach to
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 2
 # The size of the volume
@@ -106,8 +98,8 @@ access = s3
 
 # The 'volume' section defines a volume
 [volume3]
-# Name of the client AM to attach to
-client = am1
+# Name of the server AM node to attach to
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 3
 # The size of the volume
@@ -123,20 +115,7 @@ access = blk
 [scenario_0_1]
 # Bring up node node1
 script          = [node1]
-action          = bootup
-# Delay wait after running the script. In seconds.
-delay_wait      = 10
-
-[scenario_0_2]
-# Bring up AM
-script          = [am1]
-action          = bootup
-delay_wait      = 10
-
-[scenario_0_3]
-# Activate the cluster as currently defined.
-script          = [cluster]
-action          = activate
+action          = install-boot-activate
 
 [scenario_0_4]
 # Verify node node1 is up
@@ -209,12 +188,7 @@ params          = volume2
 # Boot and activate a second node.
 [scenario_4_1]
 script          = [node2]
-action          = bootup
-delay_wait      = 10
-
-[scenario_4_2]
-script          = [cluster]
-action          = activate
+action          = install-boot-activate
 
 [scenario_4_3]
 # Verify nodes node1 and 2 are up
@@ -226,12 +200,7 @@ fds_nodes       = node1,node2
 # Boot and activate a third node.
 [scenario_5_1]
 script          = [node3]
-action          = bootup
-delay_wait      = 10
-
-[scenario_5_2]
-script          = [cluster]
-action          = activate
+action          = install-boot-activate
 
 [scenario_5_3]
 # Verify nodes node1, 2, and 3 are up
@@ -243,12 +212,7 @@ fds_nodes       = node1,node2,node3
 # Boot and activate a fourth node.
 [scenario_6_1]
 script          = [node4]
-action          = bootup
-delay_wait      = 10
-
-[scenario_6_2]
-script          = [cluster]
-action          = activate
+action          = install-boot-activate
 
 [scenario_6_3]
 # Verify nodes node1, 2, 3, and 4 are up
@@ -257,42 +221,29 @@ state           = up
 # Comma separated list of nodes. No white space, please.
 fds_nodes       = node1,node2,node3,node4
 
-[scenario_7]
-# Wait until node node2's log shows SM migration starting
-script          = [waitforlog]
-# Node containing log to search.
-fds_node        = node2
-# Service whose log is to be searched.
-service         = sm
-# Log entry to search for.
-logentry        = Will migrate tokens from source SM
-# Exactly the number of occurrences that must be found for success.
-occurrences     = 1
-# Maximum time to wait for the search to be successful before giving up as failure.
-maxwait         = 600
+# Not seeing this message. Is there a new one to look for?
+#[scenario_7]
+## Wait until node node2's log shows SM migration starting
+#script          = [waitforlog]
+## Node containing log to search.
+#fds_node        = node2
+## Service whose log is to be searched.
+#service         = sm
+## Log entry to search for.
+#logentry        = Will migrate tokens from source SM
+## Exactly the number of occurrences that must be found for success.
+#occurrences     = 1
+## Maximum time to wait for the search to be successful before giving up as failure.
+#maxwait         = 60
 
-# Shutdown nodes so we can get access to the LevelDB files
+# Kill nodes so we can get access to the LevelDB files
 # to check static migration.
 #
 # Shutdown the fourth node.
 [scenario_7_1]
-script          = [node4]
-action          = shutdown
+script          = [cluster]
+action          = kill
 
-# Now the third node.
-[scenario_7_2]
-script          = [node3]
-action          = shutdown
-
-# The second node.
-[scenario_7_3]
-script          = [node2]
-action          = shutdown
-
-# Finally the first node.
-[scenario_7_4]
-script          = [node1]
-action          = shutdown
 
 # Run the DM and SM Checkers to confirm Static Migration.
 [scenario_8_1]
@@ -406,20 +357,9 @@ params          = node1,node4
 
 # Now clean up installation areas.
 [scenario_b_1]
-script          = [node4]
-action          = deletefds
+script          = [cluster]
+action          = uninst
 
-[scenario_b_2]
-script          = [node3]
-action          = deletefds
-
-[scenario_b_3]
-script          = [node2]
-action          = deletefds
-
-[scenario_b_4]
-script          = [node1]
-action          = deletefds
 
 
 
