--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -36,9 +36,9 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-platform</artifactId>
-            <version>2.1.5</version>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>1.2.0.Beta6</version>
         </dependency>
 
         <!-- JPA providers -->
@@ -187,6 +187,11 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-json-org</artifactId>
             <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.uncommons.maths</groupId>
