Updates supporting: - Formation cloud deployment fixes - Formation cloud deploy inventory w/ encrypted vars - Soak cluster inventory updates

--- a/ansible/tasks/deploy_fds/pre_deploy_setup.yml
+++ b/ansible/tasks/deploy_fds/pre_deploy_setup.yml
@@ -2,6 +2,7 @@
 -   name: set the root password
     action: user name=root
         password=$1$M7e8qbJh$0nDQnqfGh5Ce80bbYKp5U/
+    when: no_password_change is not defined
     tags:
         - setup
 
