--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -13,6 +13,12 @@ Host !awo-bh-01* awo-* 10.3.*
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
 
+Host ec2-*.us-west-2.compute.amazonaws.com
+    User deploy
+    IdentityFile ~/.ssh/fds-deploy_rsa
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+
 Host *
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
