--- a/ansible/playbooks/influxdb_ec2.yml
+++ b/ansible/playbooks/influxdb_ec2.yml
@@ -9,6 +9,59 @@
 
     tasks:
 
+    -   name: create InfluxDB node security group
+        ec2_group:
+            name: influxdb
+            state: present
+            description: "InfluxDB Nodes"
+            region: us-west-2
+            aws_access_key: "{{ aws_access_key }}"
+            aws_secret_key: "{{ aws_secret_key }}"
+            rules:
+              - proto: tcp
+                from_port: 8083
+                to_port: 8083
+                cidr_ip: 0.0.0.0/0
+              - proto: tcp
+                from_port: 8086
+                to_port: 8086
+                cidr_ip: 0.0.0.0/0
+              - proto: tcp
+                from_port: 22
+                to_port: 22
+                cidr_ip: 0.0.0.0/0
+              - proto: icmp
+                from_port: -1
+                to_port: -1
+                cidr_ip: 0.0.0.0/0
+        register: influxdb_node_sg
+
+    -   name: create Elastic Load Balancer instance for InfluxDB
+        ec2_elb_lb:
+            name: "influxdb-elb"
+            state: present
+            aws_access_key: "{{ aws_access_key }}"
+            aws_secret_key: "{{ aws_secret_key }}"
+            connection_draining_timeout: 10
+            listeners:
+                - protocol: http
+                  load_balancer_port: 8083
+                  instance_port: 8083
+                - protocol: http
+                  load_balancer_port: 8086
+                  instance_port: 8086
+            health_check:
+                ping_protocol: tcp 
+                ping_port: 8086
+#                ping_path: "/db/?u=root&p=root"
+                response_timeout: 2
+                interval: 5 # seconds
+                unhealthy_threshold: 2
+                healthy_threshold: 2
+            region: us-west-2
+            zones:
+                - us-west-2a
+            
     -   name: copy FDS deploy key locally
         include: ../tasks/deploy_fds/copy_fds_deploy_key.yml
 
@@ -23,43 +76,33 @@
                 fds_purpose: influxdb
             key_name: fds-ie
             group_id:
-                - sg-43b9c126
-                - sg-30eab855
+                - "{{ influxdb_node_sg.group_id }}"
             instance_type: m3.large
             image: ami-0f114a3f
             volumes:
                 -   device_name: /dev/sda2
                     volume_size: 100
                     delete_on_termination: false
-            vpc_subnet_id: subnet-195bac40
             monitoring: no
             region: us-west-2
-            zone: us-west-2c
+            zone: us-west-2a
             wait: yes
         register: ec2
 
     -   name: Add all instance public IPs to host group
-        add_host: hostname={{ item.private_ip }} groupname=ec2hosts
+        add_host: hostname={{ item.dns_name }} groupname=ec2hosts
         with_items: ec2.tagged_instances
 
-################################################################################
-### This is necessary for now until I can get a Github issue put in and resolved
--   hosts: awo-bh-01
-    name: wait for EC2 instances to be reachable
-    remote_user: deploy
-    gather_facts: false
-    sudo: false
-    tags: wait
-
-    tasks:
+    -   debug:
+            msg: "{{ item }}"
+        with_items: groups.ec2hosts
 
     -   name: wait for SSH to come up on all instances
-        wait_for: host={{ item }} port=22 delay=1 timeout=300 state=started
+        local_action: wait_for host={{ item }} port=22 delay=1 timeout=300 state=started
         with_items: groups.ec2hosts
-################################################################################
 
 
--   name: Deploy FDS
+-   name: Deploy InfluxDB
     hosts: ec2hosts
     remote_user: deploy
     gather_facts: true
@@ -69,8 +112,13 @@
         data_vol_name: datalv01
         this_is_an_ec2_node: true
         influxdb_version: 0.8.8
+    vars_files:
+    -   ../vars_files/credentials/aws_fds_testing.yml
 
     tasks:
+    -   name: gather ec2 facts
+        ec2_facts:
+
     -   name: get InfluxDB package
         get_url: url=https://s3.amazonaws.com/influxdb/influxdb_{{ influxdb_version }}_amd64.deb
             dest=/root/influxdb_{{ influxdb_version }}_amd64.deb
@@ -133,3 +181,14 @@
         service: name=influxdb
             state=started
             enabled=yes
+
+    -   name: register InfluxDB node in ELB
+        local_action: 
+            module: ec2_elb
+            aws_access_key: "{{ aws_access_key }}"
+            aws_secret_key: "{{ aws_secret_key }}"
+            state: present
+            ec2_elbs: influxdb-elb
+            instance_id: "{{ ansible_ec2_instance_id }}"
+            region: us-west-2
+            wait: yes
