added omnibus project to package up python+ansible (and the other needed bits) for deployment of FDS in a no-internet situation. added additional path to omnibus binaries to deploy_fds.sh and deploy_fds_ec.sh

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -152,3 +152,9 @@
         owner=root
         mode=0777
         state=directory
+
+    - name: create omnibus install directory for fds-deploy
+      file: path=/opt/fds-deploy
+        owner=root
+        mode=0777
+        state=directory
