--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>1.2.0.Beta6</version>
+            <version>1.1.2.Final</version>
         </dependency>
 
         <!-- JPA providers -->
