FS-903: Implement a 'fork' script for the FDS Scenario config file that will enable one to fork either a test case, a test suite, or a different FDS Scenario config to run in parallel with the primary FDS Scenario config test.

--- a/source/test/cfg/Restartability.cfg
+++ b/source/test/cfg/Restartability.cfg
@@ -43,7 +43,7 @@ enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
-services        = dm,sm
+services        = dm,sm,am
 
 [node4]
 enable          = true
@@ -68,7 +68,7 @@ priority = 1
 # The 'volume' section defines a volume
 [volume1]
 # Name of the client AM to attach to
-client = am1
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 1
 # The size of the volume
@@ -81,7 +81,7 @@ access = s3
 # The 'volume' section defines a volume
 [volume2]
 # Name of the client AM to attach to
-client = am1
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 2
 # The size of the volume
@@ -94,7 +94,7 @@ access = s3
 # The 'volume' section defines a volume
 [volume3]
 # Name of the client AM to attach to
-client = am2
+client = node3
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 3
 # The size of the volume
@@ -180,10 +180,8 @@ params          = volume3
 
 
 [scenario_start_nbd_writes_asynchronously]
-script          = [testcases.TestBlockIntFace.TestBlockFioSeqW]
-# Command separated list of parameter names and values
-param_names     = waitComplete
-params          = False
+script          = [fork]
+real-script     = [testcases.TestBlockIntFace.TestBlockFioSeqW]
 
 [scenario_let_nbd_writes_run a bit]
 script          = [testcases.TestMgt.TestWait]
@@ -193,21 +191,21 @@ params          = 5,to let a few NBD writes complete
 
 
 
-[scenario_shutdown_domain]
-script          = [testcases.TestFDSSysMgt.TestDomainShutdown]
-delay_wait      = 10
+[scenario_kill_cluster]
+script          = [cluster]
+action          = kill
 
-[scenario_create_domain]
-script          = [testcases.TestFDSSysMgt.TestDomainCreate]
-delay_wait      = 10
+[scenario_boot_cluster]
+script          = [cluster]
+action           = boot-activate
 
 
-
-[scenario_detach_nbd_service_for_volume_volume3]
-script          = [testcases.TestBlockIntFace.TestBlockDetachVolume]
+[scenario_let_tester_check_things]
+script          = [testcases.TestMgt.TestWait]
 # Command separated list of parameter names and values
-param_names     = volume
-params          = volume3
+param_names     = delay,reason
+params          = 120,to let a few things be manually checked
+
 
 
 
