Refactor tests against Greg's system test changes & reduce to 1 node

--- a/source/test/cfg/RestartDataPersistence.cfg
+++ b/source/test/cfg/RestartDataPersistence.cfg
@@ -40,19 +40,19 @@ fds_root        = /fds/node1
 fds_port        = 7000
 
 [node2]
-enable          = true
+enable          = false
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
 
 [node3]
-enable          = true
+enable          = false
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
 
 [node4]
-enable          = true
+enable          = false
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
@@ -110,10 +110,15 @@ access = blk
 [scenario_cleanup_shared_memory]
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 
+[scenario_cluster_cleanup]
+# Bring up node node1
+script          = [cluster]
+action          = kill-uninst
+
 [scenario_cluster_bringup]
 # Bring up node node1
 script          = [cluster]
-action          = bootup
+action          = install-boot-activate
 
 [scenario_create_policy1]
 # Create a volume policy.
@@ -161,31 +166,9 @@ params					= volume1
 # to check static migration.
 #
 # Shutdown all nodes
-[scenario_node4shutdown]
-script          = [node4]
-action          = shutdown
-
-# Now the third node.
-[scenario_node3shutdown]
-script          = [node3]
-action          = shutdown
-
-# The second node.
-[scenario_node2shutdown]
-script          = [node2]
-action          = shutdown
-
-# Finally the first node.
-[scenario_node1shutdown]
-script          = [node1]
-action          = shutdown
-
-[scenario_nodedownverify]
-# Verify node node1 is up
-script          = [verify]
-state           = down
-# Comma separated list of nodes.
-fds_nodes       = node1,node2,node3,node4
+[scenario_clustershutdown]
+script          = [cluster]
+action          = kill
 
 [scenario_cleanup_shared_memory]
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
@@ -193,11 +176,11 @@ script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 [scenario_bringup_cluster_after_stop]
 # Bring up node node1
 script          = [cluster]
-action          = bootup
+action          = boot-activate
 
 # RUN VALIDATION TESTS HERE
 
 # # Shutdown all nodes
 [scenario_shutdown_and_clean_cluster]
 script          = [cluster]
-action          = shutdown
+action          = kill-uninst
