Consolidating 3 BlobDescriptor and 1 BlobInfo structures with same members

--- a/source/data-mgr/dm-lib/dm-vol-cat/Makefile
+++ b/source/data-mgr/dm-lib/dm-vol-cat/Makefile
@@ -11,8 +11,8 @@ user_cpp          := \
 	DmVolumeCatalog.cpp \
 	DmPersistVolCat.cpp \
 	DmPersistVolDB.cpp \
-	DmOIDArrayMmap.cpp \
-	DmPersistVolFile.cpp
+#	DmOIDArrayMmap.cpp \
+#	DmPersistVolFile.cpp
 
 user_ar_libs      := fds-dm-lib
 fds-dm-lib        := $(user_cpp)
