--- a/source/java/admin-webapp/package.json
+++ b/source/java/admin-webapp/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-concat": "",
     "grunt-contrib-copy": "",
     "grunt-contrib-sass": "^0.7.3",
+    "grunt-focus": "",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-connect": "",
     "grunt-contrib-cssmin": "",
