updates to resolve problems fetching object hash & storing it

--- a/source/test/cfg/RestartDataPersistence.cfg
+++ b/source/test/cfg/RestartDataPersistence.cfg
@@ -151,26 +151,22 @@ script					= [testcases.TestS3IntFace.TestS3LoadVerifiableObject]
 param_names			= bucket
 params					= volume1
 
+[scenario_waitforobjectcreation]
+script          = [testcases.TestMgt.TestWait]
+param_names     = delay,reason
+params          = 5,to let created object become available in system
+
 [scenario_checkverifiableobject]
 script					= [testcases.TestS3IntFace.TestS3CheckVerifiableObject]
 param_names			= bucket
 params					= volume1
 
-#
-#
-# RUN STORAGE & PRE-RESTART VALIDATION HERE
-#
-#
-
-# Shutdown nodes so we can get access to the LevelDB files
-# to check static migration.
-#
 # Shutdown all nodes
 [scenario_clustershutdown]
 script          = [cluster]
 action          = kill
 
-[scenario_cleanup_shared_memory]
+[scenario_cleanup_shared_memory2]
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 
 [scenario_bringup_cluster_after_stop]
@@ -178,7 +174,15 @@ script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 script          = [cluster]
 action          = boot-activate
 
-# RUN VALIDATION TESTS HERE
+[scenario_waitforclustersettling]
+script          = [testcases.TestMgt.TestWait]
+param_names     = delay,reason
+params          = 20,to let cluster settle and populate data
+
+[scenario_checkverifiableobject]
+script					= [testcases.TestS3IntFace.TestS3CheckVerifiableObject]
+param_names			= bucket
+params					= volume1
 
 # # Shutdown all nodes
 [scenario_shutdown_and_clean_cluster]
