Add RedisBoot to 2nd restart of cluster

--- a/source/test/cfg/RestartDataPersistence.cfg
+++ b/source/test/cfg/RestartDataPersistence.cfg
@@ -169,6 +169,9 @@ action          = kill
 [scenario_cleanup_shared_memory2]
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 
+[scenario_restart_redis]
+script          = [testcases.TestFDSEnvMgt.TestBootRedis]
+
 [scenario_bringup_cluster_after_stop]
 # Bring up node node1
 script          = [cluster]
@@ -179,7 +182,7 @@ script          = [testcases.TestMgt.TestWait]
 param_names     = delay,reason
 params          = 20,to let cluster settle and populate data
 
-[scenario_checkverifiableobject]
+[scenario_checkverifiableobject_after_restart]
 script          = [testcases.TestS3IntFace.TestS3CheckVerifiableObject]
 param_names     = bucket
 params          = volume1
