enable multi-node again

--- a/source/test/cfg/RestartDataPersistence.cfg
+++ b/source/test/cfg/RestartDataPersistence.cfg
@@ -2,12 +2,8 @@
 # Copyright 2015 Formation Data Systems, Inc.
 #
 # Defines resource, configuration and steps to test
-# Static Migration.
+# Data persistence across restarts
 #
-# To enable SM Static Migration, you'll have to set
-# fds.sm.migration.enable_feature to "true" in the file
-# used as a template to build platform.conf's for the test.
-# Namely, .../source/config/etc/platform.conf.
 #
 # Note: Do not embed white space is comma delimited lists - test framework bug.
 
@@ -40,19 +36,19 @@ fds_root        = /fds/node1
 fds_port        = 7000
 
 [node2]
-enable          = false
+enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
 
 [node3]
-enable          = false
+enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
 
 [node4]
-enable          = false
+enable          = true
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
@@ -124,19 +120,19 @@ action          = install-boot-activate
 # Create a volume policy.
 script          = [policy1]
 action          = create
-delay_wait      = 10
+delay_wait      = 5
 
 [scenario_create_volume1]
 # Create volume volume1
 script          = [volume1]
 action          = create
-delay_wait      = 10
+delay_wait      = 5
 
 [scenario_create_volume2]
 # Create volume volume1
 script          = [volume2]
 action          = create
-delay_wait      = 10
+delay_wait      = 5
 
 [scenario_getauthtoken]
 # Get an S3 authorization token
@@ -147,47 +143,54 @@ script          = [testcases.TestOMIntFace.TestGetAuthToken]
 script          = [testcases.TestS3IntFace.TestS3GetConn]
 
 [scenario_storeverifiableobject]
+# Store an object that we can later verify
 script          = [testcases.TestS3IntFace.TestS3LoadVerifiableObject]
 param_names     = bucket
 params          = volume1
 
 [scenario_waitforobjectcreation]
+# Wait for object to propogate in system
 script          = [testcases.TestMgt.TestWait]
 param_names     = delay,reason
 params          = 5,to let created object become available in system
 
 [scenario_checkverifiableobject]
+# Validate object before we restart the cluster
 script          = [testcases.TestS3IntFace.TestS3CheckVerifiableObject]
 param_names     = bucket
 params          = volume1
 
-# Shutdown all nodes
 [scenario_clustershutdown]
+# Take cluster down without cleaning
 script          = [cluster]
 action          = kill
 
 [scenario_cleanup_shared_memory2]
+# Clean shared memory to address service layer bug(s)
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
 
 [scenario_restart_redis]
+# Start redis as it doesn't seem to happen as part of cluster boot
 script          = [testcases.TestFDSEnvMgt.TestBootRedis]
 
 [scenario_bringup_cluster_after_stop]
-# Bring up node node1
+# Boot the cluster without cleaning
 script          = [cluster]
 action          = boot-activate
 
 [scenario_waitforclustersettling]
+# Allow some time for the cluster to settle
 script          = [testcases.TestMgt.TestWait]
 param_names     = delay,reason
 params          = 20,to let cluster settle and populate data
 
 [scenario_checkverifiableobject_after_restart]
+# Validate object again after restart
 script          = [testcases.TestS3IntFace.TestS3CheckVerifiableObject]
 param_names     = bucket
 params          = volume1
 
-# # Shutdown all nodes
 [scenario_shutdown_and_clean_cluster]
+# Cleanup & shutdown
 script          = [cluster]
 action          = kill-uninst
