revert change to install boto 2.28.0, not needed here and not an appropriate place for it anyways

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -95,6 +95,7 @@
         - python-redis
         - python-requests
         - python-argh
+        - python-boto
         - python-thrift
         - fds-pkghelper
         - fds-pkg
@@ -122,7 +123,6 @@
         - httplib2
         - docker-py
         - psutil
-        - "boto==2.28.0"
 
     - name: install perl modules
       cpanm: name={{ item }} mirror=http://cpan.mirror.vexxhost.com notest=true
