--- a/source/test/cfg/RestartDataPersistence.cfg
+++ b/source/test/cfg/RestartDataPersistence.cfg
@@ -18,49 +18,33 @@ password        = passwd
 # with 'node' but is also used as a unique ID for the node.
 #
 [node1]
-# Denotes this node will run an OM. Therefore, it is enabled automatically.
 om              = true
-
-# We'll start Redis with this node. Since all the other nodes listed
-# here are on the same machine, we don't need to specify Redis for
-# boot up on them.
 redis           = true
-
-# IP of the node
 ip              = localhost
-
-# Fds root directory to use
 fds_root        = /fds/node1
-
-# Base port for that node, not needed if we don't run all nodes one physical machine
 fds_port        = 7000
+services        = sm,dm,am
 
 [node2]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node2
 fds_port        = 7100
+services        = sm,dm,am
 
 [node3]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node3
 fds_port        = 7200
+services        = sm,dm,am
 
 [node4]
 enable          = true
 ip              = localhost
 fds_root        = /fds/node4
 fds_port        = 7300
-
-# The 'sh'/'am' section defines a Access Manager nodes and parameters. The section must be prefixed
-# with 'sh' or 'am' but is also used as a unique ID for the AM.
-#
-[am1]
-# Server uses blk services?
-blk             = false
-# Server node
-fds_node        = node1
+services        = sm,dm,am
 
 # The 'policy' section defines a volume policy
 #
@@ -77,7 +61,7 @@ priority = 1
 # The 'volume' section defines a volume
 [volume1]
 # Name of the client AM to attach to
-client = am1
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 1
 # The size of the volume
@@ -90,7 +74,7 @@ access = s3
 # The 'volume' section defines a volume
 [volume2]
 # Name of the client AM to attach to
-client = am1
+client = node1
 # The ID of the volume. Apparently ignored by the FDS system which assigns what it wants.
 id     = 3
 # The size of the volume
@@ -102,6 +86,8 @@ access = blk
 
 # TEST STEPS or CASES or SCENARIOS
 # Will be ordered according to scenario name.
+# Names must be unique otherwise last stanza w/ the same name is used for all
+# scenario steps with that name
 
 [scenario_cleanup_shared_memory]
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
@@ -168,10 +154,6 @@ action          = kill
 [scenario_cleanup_shared_memory2]
 # Clean shared memory to address service layer bug(s)
 script          = [testcases.TestFDSEnvMgt.TestFDSSharedMemoryClean]
-
-[scenario_restart_redis]
-# Start redis as it doesn't seem to happen as part of cluster boot
-script          = [testcases.TestFDSEnvMgt.TestBootRedis]
 
 [scenario_bringup_cluster_after_stop]
 # Boot the cluster without cleaning
